# sozoku-rag

./: README.md  crassify.py  create_index.py  get_all_links.py  main.py  pyproject.toml  scrape.py
index.faiss/: index.faiss  index.pkl
outputs/: sozoku.csv  sozoku.txt
